Change backend paths and add dynamic sign in type

--- a/authentication/sign_up.html
+++ b/authentication/sign_up.html
@@ -9,7 +9,8 @@
         <h2>WELCOME</h2>
         <div class="container" id="container">
             <form
-                action="sign_up.php"
+                autocomplete="on"
+                action="./backend/sign_up.php"
                 method="post"
                 enctype="multipart/form-data"
             >
