--- a/authentication/sign_in.html
+++ b/authentication/sign_in.html
@@ -9,7 +9,7 @@
         <h2>WELCOME</h2>
         <div class="container" id="container">
             <div class="form-container sign-up-container">
-                <form action="sign_in.php" method="post">
+                <form action="./backend/sign_in.php" method="post">
                     <h1>Log In</h1>
                     <input type="hidden" name="form-id" value="staff" />
                     <input type="email" name="email" placeholder="Email" required />
@@ -18,9 +18,9 @@
                 </form>
             </div>
             <div class="form-container sign-in-container">
-                <form action="./sign_in.php" method="post">
+                <form action="./backend/sign_in.php" method="post">
                     <h1>Sign in</h1>
-                    <input type="hidden" name="form-id" value="resident" />
+                    <input type="hidden" name="form-id" value="<?php echo DB_RESIDENT_TABLE; ?>" />
                     <input type="email" name="email" placeholder="Email" required />
                     <input type="password" name="password" placeholder="Password" required />
                     <a href="#">Forgot your password?</a>
