--- a/authentication/sign_in.html
+++ b/authentication/sign_in.html
@@ -20,7 +20,7 @@
             <div class="form-container sign-in-container">
                 <form action="./backend/sign_in.php" method="post">
                     <h1>Sign in</h1>
-                    <input type="hidden" name="form-id" value="<?php echo DB_RESIDENT_TABLE; ?>" />
+                    <input type="hidden" name="form-id" value="resident" />
                     <input type="email" name="email" placeholder="Email" required />
                     <input type="password" name="password" placeholder="Password" required />
                     <a href="#">Forgot your password?</a>
